# flight-of-terry

./: Cargo.toml  README.md
examples/: text.rs
src/: aerodynamics.rs  hud.rs  main.rs  player.rs
