[package]
edition = "2021"
name = "flight-of-terry"
version = "0.0.1"

[dependencies]
bevy = { version = "0.8.0" }
bevy-inspector-egui = "0.12.1"
heron = { version = "4.0.0", features = ["3d"] }
bevy_terrain = { git = "https://github.com/Ku95/bevy_terrain.git" }
rand = "0.8.5"
serde = "1.0.140"
serde_json = "1.0.82"

[profile.dev]
opt-level = 3
